--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="welcome_to_money_diary">Welcome to Money Diary</string>
     <string name="todo">TODO</string>
     <string name="dashboard">Dashboard</string>
+    <string name="username">Username</string>
+    <string name="todo">TODO</string>
 </resources>
