--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
     <string name="submit">submit</string>
     <string name="please_enter_received_code_number">Please enter received code number</string>
     <string name="did_not_received_click_here_to_send_a_code_again_after_60_seconds">Did not received? Click here to send a code again after 60 seconds.</string>
+    <string name="reconfirm_password">Reconfirm Password</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="by_creating_an_account_you_will_be_agreed_to_our_terms_conditions_and_privacy_policy"><![CDATA[By creating an account, you will be agreed to our Terms & Conditions and Privacy & Policy.]]></string>
 
 </resources>
