--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,26 @@
     <string name="made_by_mmu_diploma_students">Made by MMU Diploma Students.</string>
     <string name="total_income">Total Income</string>
     <string name="rm">RM </string>
-    <string name="_0_00">0.00</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_add_record">addRecord</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="income">income</string>
+    <string name="expense">Expense</string>
+    <string name="_0_00">0.00</string>
+    <string name="description">Description</string>
+    <string name="save_record">Save Record</string>
+    <string name="category_1">Category 1</string>
+
+    <string-array name="incomeCategory">
+        <item>Category 1</item>
+        <item>Category 2</item>
+        <item>Category 3</item>
+        <item>Category 4</item>
+        <item>Category 5</item>
+    </string-array>
 </resources>
