--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,10 +43,17 @@
     <string name="category_1">Category 1</string>
 
     <string-array name="incomeCategory">
-        <item>Category 1</item>
-        <item>Category 2</item>
-        <item>Category 3</item>
-        <item>Category 4</item>
-        <item>Category 5</item>
+        <item>Income Category 1</item>
+        <item>Income Category 2</item>
+        <item>Income Category 3</item>
+        <item>Income Category 4</item>
+        <item>Income Category 5</item>
+    </string-array>
+    <string-array name="expenseCategory">
+        <item>Expense Category 1</item>
+        <item>Expense Category 2</item>
+        <item>Expense Category 3</item>
+        <item>Expense Category 4</item>
+        <item>Expense Category 5</item>
     </string-array>
 </resources>
