--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,8 @@
     <string name="matthew_labial_john_1191202516">MATTHEW LABIAL JOHN 1191202516</string>
     <string name="yong_jing_ping_1191202279">YONG JING PING 1191202279</string>
     <string name="edit_profile">Edit Profile</string>
+    <string name="send_email">SEND EMAIL</string>
+    <string name="get_new_password">get new password</string>
 
     <string-array name="incomeCategory">
         <item>Income Category 1</item>
