--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,14 +71,16 @@
     <string name="chan_lin_chee">Chan Lin Chee</string>
     <string name="matthew_labial_john">Matthew Labial John</string>
     <string name="yong_jing_ping">Yong Jing Ping</string>
-    <string name="ho_ko_ee_1191202709">HO KO EE 1191202709</string>
-    <string name="chan_lin_chee_1191202546">CHAN LIN CHEE 1191202546</string>
-    <string name="chew_zhi_peng_1191202464">CHEW ZHI PENG 1191202464</string>
-    <string name="matthew_labial_john_1191202516">MATTHEW LABIAL JOHN 1191202516</string>
-    <string name="yong_jing_ping_1191202279">YONG JING PING 1191202279</string>
+    <string name="ho_ko_ee_1191202709">1191202709</string>
+    <string name="chan_lin_chee_1191202546">1191202546</string>
+    <string name="chew_zhi_peng_1191202464">1191202464</string>
+    <string name="matthew_labial_john_1191202516">1191202516</string>
+    <string name="yong_jing_ping_1191202279">1191202279</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="send_email">SEND EMAIL</string>
     <string name="get_new_password">get new password</string>
+    <string name="our_members">Our Members</string>
+    <string name="total_expense">Total Expense</string>
 
     <string-array name="incomeCategory">
         <item>Income Category 1</item>
